--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,12 @@
     {% endif %}
 </head>
 <body>
-    <div>Bazinga: <a href="/index">Home</a></div>
+    <div>Bazinga:
+        <a href="/index">Home</a>
+        {% if g.user.is_authenticated %}
+        | <a href="{{ url_for('logout') }}">登出</a>
+        {% endif %}
+    </div>
     <hr>
     {% with messages = get_flashed_messages() %}
         {% if messages %}
