--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta property="qc:admins" content="54112610514114167605273510063757" />
     {% if title %}
     <title>{{ title }} - microblog</title>
     {% else %}
@@ -10,8 +11,9 @@
 </head>
 <body>
     <div>Bazinga:
-        <a href="/index">Home</a>
+        <a href="/index">首页</a>
         {% if g.user.is_authenticated %}
+        | <a href="{{ url_for('user', nickname=g.user.nickname) }}">你的信息</a>
         | <a href="{{ url_for('logout') }}">登出</a>
         {% endif %}
     </div>
