--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -31,4 +31,5 @@ function set_openid(openid, pr)
     <p>{{ form.remember_me }} 记住我</p>
     <p><input type="submit" value="登录"></p>
 </form>
+<p><a href="{{ url_for('oauth_authorize', provider='qq') }}">Login with QQ</a></p>
 {% endblock %}
