--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 {% extends "base.html" %}
 {% block content %}
+    <p><a href="{{ url_for('oauth_authorize', provider='qq') }}">Login with QQ</a></p>
     <h1>Hello, {{ user.nickname }}!</h1>
     {% for post in posts %}
     <div><p>{{ post.author.nickname }} says: <b>{{ post.body }}</b></p></div>
