--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,23 +10,7 @@
     {% endif %}
 </head>
 <body>
-    <div>Bazinga:
-        <a href="/index">首页</a>
-        {% if g.user.is_authenticated %}
-        | <a href="{{ url_for('user', nickname=g.user.nickname) }}">你的信息</a>
-        | <a href="{{ url_for('logout') }}">登出</a>
-        {% endif %}
-    </div>
-    <hr>
-    {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            <ul>
-            {% for message in messages %}
-                <li>{{ message }}</li>
-            {% endfor %}
-            </ul>
-        {% endif %}
-    {% endwith %}
+    <div>Bazinga</div>
     {% block content %}{% endblock %}
 </body>
 </html>
