--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 {% extends "base.html" %}
 {% block content %}
-    <p><a href="{{ url_for('login') }}">Login with QQ</a></p>
+    <p><a href="{{ url_for('get_user_info') }}">Login with QQ</a></p>
 {% endblock %}
