--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,6 +3,6 @@
 <title>Login</title>
 
 <h1>Login</h1>
-<a href ="{{ url_for('login') }}">Login with OAuth2</a>
+<a href ="{{ url_for('login') }}">Login with Github</a>
 <h1>About</h1>
 <a href="{{ url_for('about') }}">About</a> If you are not logged in then you will be redirected to login page.
