--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,11 +1,11 @@
 <!-- templates/about.html -->
 <!doctype html>
-<title>Login</title>
-
+{% extends "base.html" %}
+{% block content %}
 <h1>About you</h1>
 Welcome <h2>{{ user.login }}</h2><img src="{{ user.avatar_url }}" height="100" width="100">
 
-
-<p>{{ user }}</p>
+{#<p>{{ user }}</p>#}
 <br />
-<a href ="">Main page</a>
+<a href ="{{ url_for('index') }}">Main page</a>
+{% endblock %}
