--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 {% extends "base.html" %}
 {% block content %}
-    <p><a href="{{ url_for('get_user_info') }}">Login with QQ</a></p>
+    <h1>Welcom, {{ g.user.nickname }}</h1>
+    <p>Your email is {{ g.user.email }}.</p>
+    <h2><a href="{{ url_for('about') }}">About Me</a></h2> If you are not logged in then you will be redirected to login page.
 {% endblock %}
