--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,8 +1,9 @@
 <!-- templates/login.html -->
 <!doctype html>
-<title>Login</title>
-
-<h1>Login</h1>
-<a href ="{{ url_for('login') }}">Login with Github</a>
-<h1>About</h1>
-<a href="{{ url_for('about') }}">About</a> If you are not logged in then you will be redirected to login page.
+{% extends "base.html" %}
+{% block content %}
+    <h1>Login</h1>
+    <a href ="{{ url_for('login') }}">Login with Github</a>
+    <h1>About</h1>
+    <p>My first microblog. You login with github account.</p>
+{% endblock %}
