--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,11 +12,21 @@
 <body>
     <div>Bazinga:
         | <a href="{{ url_for('index') }}">首页</a>
-        | <a href="{{ url_for('about') }}">关于我</a>
+        | <a href="{{ url_for('user', nickname=g.user.nickname) }}">关于我</a>
         {% if g.user.is_authenticated %}
         | <a href="{{ url_for('logout') }}">退出</a>
         {% endif %}
     </div>
+    <hr>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <ul>
+            {% for message in messages %}
+                <li>{{ message }}</li>
+            {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
     {% block content %}{% endblock %}
 </body>
 </html>
