--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta property="qc:admins" content="54112610514114167605273510063757" />
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% if title %}
     <title>{{ title }} - Bazinga</title>
     {% else %}
@@ -11,11 +16,19 @@
 </head>
 <body>
     <div>Bazinga:
-        | <a href="{{ url_for('index') }}">首页</a>
-        | <a href="{{ url_for('user', nickname=g.user.nickname) }}">关于我</a>
-        {% if g.user.is_authenticated %}
-        | <a href="{{ url_for('logout') }}">退出</a>
-        {% endif %}
+        <ul class="nav nav-tabs">
+            <li class="active">
+                <a href="{{ url_for('index') }}">首页</a>
+            </li>
+            <li class="active">
+                <a href="{{ url_for('user', nickname=g.user.nickname) }}">关于我</a>
+            </li>
+            <li class="active">
+                {% if g.user.is_authenticated %}
+                <a href="{{ url_for('logout') }}">退出</a>
+                {% endif %}
+            </li>
+        </ul>
     </div>
     <hr>
     {% with messages = get_flashed_messages() %}
