--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,7 @@
     <link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet">
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/moment.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% if title %}
     <title>{{ title }} - Bazinga</title>
@@ -15,21 +16,29 @@
     {% endif %}
 </head>
 <body>
-    <div>Bazinga:
-        <ul class="nav nav-tabs">
-            <li class="active">
-                <a href="{{ url_for('index') }}">首页</a>
-            </li>
-            <li class="active">
-                <a href="{{ url_for('user', nickname=g.user.nickname) }}">关于我</a>
-            </li>
-            <li class="active">
-                {% if g.user.is_authenticated %}
-                <a href="{{ url_for('logout') }}">退出</a>
-                {% endif %}
-            </li>
-        </ul>
+    <div class="navbar navbar-fixed-top">
+        <div class="navbar-inner">
+            <a class="brand">Bazinga:</a>
+            <ul class="nav" id="myTab">
+                <li class="active"><a href="{{ url_for('index') }}">首页</a></li>
+                <li><a href="{{ url_for('user', nickname=g.user.nickname) }}">关于我</a></li>
+                <li>{% if g.user.is_authenticated %}<a href="{{ url_for('logout') }}">退出</a>{% endif %}</li>
+            </ul>
+        </div>
     </div>
+{#    <script>#}
+{#        $(document).ready(function(){#}
+{#            $('.nav > li').click(function(e) {#}
+{#                e.preventDefault();#}
+{#                $('.nav li.active').removeClass('active');#}
+{#                var $this = $(this);#}
+{#                if (!$this.hasClass('active')) {#}
+{#                    $this.addClass('active');#}
+{#                }#}
+{#            });#}
+{#        });#}
+{##}
+{#    </script>#}
     <hr>
     {% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -40,6 +49,11 @@
             </ul>
         {% endif %}
     {% endwith %}
-    {% block content %}{% endblock %}
+    <div class="row">
+        <div class="span12">
+          {% block content %}{% endblock %}
+        </div>
+      </div>
 </body>
+
 </html>
