time not chinese ise

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta property="qc:admins" content="54112610514114167605273510063757" />
@@ -16,6 +16,7 @@
     {% endif %}
 </head>
 <body>
+    <p>{{ g.locale }}</p>
     <div class="navbar navbar-fixed-top">
         <div class="navbar-inner">
             <a class="brand">Bazinga:</a>
