--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,16 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta property="qc:admins" content="54112610514114167605273510063757" />
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/moment.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% if title %}
-    <title>{{ title }} - microblog</title>
+    <title>{{ title }} - Bazinga</title>
     {% else %}
     <title>Bazinga</title>
     {% endif %}
 </head>
 <body>
-    <div>Bazinga</div>
-    {% block content %}{% endblock %}
+    <p>{{ g.locale }}</p>
+    <div class="navbar navbar-fixed-top">
+        <div class="navbar-inner">
+            <a class="brand">Bazinga:</a>
+            <ul class="nav" id="myTab">
+                <li class="active"><a href="{{ url_for('index') }}">首页</a></li>
+                <li><a href="{{ url_for('user', nickname=g.user.nickname) }}">关于我</a></li>
+                <li>{% if g.user.is_authenticated %}<a href="{{ url_for('logout') }}">退出</a>{% endif %}</li>
+            </ul>
+        </div>
+    </div>
+{#    <script>#}
+{#        $(document).ready(function(){#}
+{#            $('.nav > li').click(function(e) {#}
+{#                e.preventDefault();#}
+{#                $('.nav li.active').removeClass('active');#}
+{#                var $this = $(this);#}
+{#                if (!$this.hasClass('active')) {#}
+{#                    $this.addClass('active');#}
+{#                }#}
+{#            });#}
+{#        });#}
+{##}
+{#    </script>#}
+    <hr>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <ul>
+            {% for message in messages %}
+                <li>{{ message }}</li>
+            {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
+    <div class="row">
+        <div class="span12">
+          {% block content %}{% endblock %}
+        </div>
+      </div>
 </body>
+
 </html>
