--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -14,7 +14,7 @@
         </tr>
     </table>
     <hr>
-    {% for post in posts %}
+    {% for post in posts.items %}
         {% include 'post.html' %}
     {% endfor %}
     <ul class="pager">
